--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,7 +27,7 @@ a {
 
 		.ham {
 			background: #00224f;
-			padding: 10px 20px;
+			padding: 10px 30px;
 			display: flex;
 			z-index: 6;
 			justify-content: space-between;
@@ -44,10 +44,10 @@ a {
 			position: fixed;
 			transition: all .3s;
 			background: #00224f;
-			z-index: 5;
+			z-index: -1;
 			top: 0; 
 			left: 0;
-			padding: 0 20px;
+			padding: 0 30px;
 			height: 0;
 		}
 
@@ -59,8 +59,45 @@ a {
 		}
 
 		.open_overlay {
-			padding: 100px 20px 20px;
+			z-index: 5;
+			padding: 100px 30px 30px;
 			height: 100vh;
 		}
+	}
+
+
+	.content {
+		padding: 30px;
+
+		.title {
+			font-size: 24px;
+		}
+
+		.img {
+			width: 100%;
+			display: grid;
+			place-items: center;
+			padding: 40px 0 50px;
+			
+			img {
+				width: 225px;
+				height: 225px;
+				border-radius: 50%;
+			}
+		}
+
+		.text {
+			display: grid;
+			grid-gap: 20px;
+		}
+	}
+
+	.footer {
+		width: 85%;
+		position: absolute;
+		bottom: 0;
+		border-top: 1px solid rgba( 0, 0, 4, 0.125 );
+		padding: 20px 0;
+		margin: 0 30px; 
 	}
 }
