--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,7 +19,7 @@ a {
 }
 
 .main {
-
+	height: 100%;
 
 	.nav {
 		color: #fff;
@@ -93,9 +93,7 @@ a {
 	}
 
 	.footer {
-		width: 85%;
-		position: absolute;
-		bottom: 0;
+		margin-top: -50px;
 		border-top: 1px solid rgba( 0, 0, 4, 0.125 );
 		padding: 20px 0;
 		margin: 0 30px; 
