added routes and layout

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,4 +18,11 @@ a {
   font-family: 'Archivo', sans-serif;
 }
 
+.footer {
+  margin-top: -50px;
+  border-top: 1px solid rgba( 0, 0, 4, 0.125 );
+  padding: 20px 0;
+  margin: 0 30px; 
+}
+
 
