--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -17,13 +17,28 @@
 			margin-bottom: 30px;
 		}
 
-		.diff_projs {
+		.diff_proj {
+			margin-bottom: 35px;
 
 			.head {
 				img {
 					width: 16px;
 					height: 16px;
 					margin-right: 7px;
+				}
+			}
+		}
+
+		.diff_proj_content {
+			ul {
+				li {
+					line-height: 23px;
+
+					a {
+						border-bottom: 1px solid black;
+    				padding-bottom:2px;
+						margin-right: 5px;
+					}
 				}
 			}
 		}
