--- a/styles/about.scss
+++ b/styles/about.scss
@@ -29,6 +29,15 @@
 		.text {
 			display: grid;
 			grid-gap: 20px;
+
+			.t1 {
+				line-height: 25px;
+
+				img {
+					width: 16px;
+					height: 16px;
+				}
+			}
 		}
 	}
 }
