--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -33,6 +33,7 @@
 			ul {
 				li {
 					line-height: 23px;
+                                        margin-bottom: 10px;
 
 					a {
 						border-bottom: 1px solid black;
