--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -13,10 +13,14 @@
 			justify-content: space-between;
 			position: relative;
 
-			.name {
+			.leftham {
 				margin: auto 0;
-			}
 
+				.prof {
+					color: rgba( 255, 255, 255, .6 );
+					font-size: 10px;
+				}
+			}
 		}
 
 		.nav_overlay {
@@ -41,5 +45,33 @@
 			padding: 100px 30px 30px;
 			height: 100vh;
 			top: 0;
+		}
+	}
+
+
+	@media only screen and (min-width: 452px) {
+		.nav {
+			position: fixed;
+			width: 100%;
+			z-index: 100;
+
+			.ham {
+				background: #00224f;
+				padding: 10px 25px;
+				display: flex;
+				z-index: 6;
+				justify-content: space-between;
+				position: relative;
+
+				.leftham {
+					margin: auto 0;
+
+					.prof {
+						display: block;
+						color: rgba( 255, 255, 255, .6 );
+						font-size: 10px;
+					}
+				}
+			}
 		}
 	}
