--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -33,7 +33,7 @@
 			ul {
 				li {
 					line-height: 23px;
-                                        margin-bottom: 10px;
+        	margin-bottom: 10px;
 
 					a {
 						border-bottom: 1px solid black;
@@ -44,4 +44,9 @@
 			}
 		}
 	}
+}
+
+
+@media only screen and (min-width: 452px) {
+	
 }
