--- a/styles/about.scss
+++ b/styles/about.scss
@@ -32,6 +32,7 @@
 
 			.t1 {
 				line-height: 25px;
+				font-size: 16px;
 
 				img {
 					width: 16px;
@@ -40,4 +41,43 @@
 			}
 		}
 	}
+}
+
+
+@media only screen and (min-width: 452px) {
+	.main {
+		height: 100%;
+		min-height: 92vh;
+		position: relative;
+
+		.content {
+			width: 560px;
+			margin: 0 auto;
+
+			.title {
+				font-size: 36px;
+			}
+
+			.img {
+				width: 100%;
+				display: grid;
+				place-items: center;
+				padding: 40px 0 50px;
+				
+				img {
+					width: 350px;
+					height: 350px;
+					border-radius: 50%;
+				}
+			}
+
+			.text {
+
+				.t1 {
+					line-height: 25px;
+					font-size: 18px;
+				}
+			}
+		}
+	}	
 }
