--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,7 +22,15 @@ a {
   margin-top: -50px;
   border-top: 1px solid rgba( 0, 0, 4, 0.125 );
   padding: 20px 0;
-  margin: 0 30px; 
+  width: calc(100% - 60px);
+  margin: 0 auto; 
+}
+
+@media only screen and (min-width: 452px) {
+  .footer {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 }
 
 
