--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -56,20 +56,14 @@
 			z-index: 100;
 
 			.ham {
-				background: #00224f;
-				padding: 10px 25px;
-				display: flex;
-				z-index: 6;
-				justify-content: space-between;
-				position: relative;
-
 				.leftham {
-					margin: auto 0;
 
 					.prof {
-						display: block;
-						color: rgba( 255, 255, 255, .6 );
-						font-size: 10px;
+						font-size: 12px;
+					}
+
+					.name {
+						font-size: 20px;
 					}
 				}
 			}
