--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -86,3 +86,19 @@
 		}
 	}
 }
+
+@media only screen and (min-width: 999px) {
+	.projects {
+		display: grid;
+		grid-template-columns: 380px 1fr;
+
+		.content {
+			grid-column: 2;
+			padding: 90px 0 30px;
+
+			.title {
+				margin-top: 0;
+			}
+		}
+	}
+}
