--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -33,6 +33,10 @@
 			}
 		}
 
+		.sidebar {
+			display: none;
+		}
+
 		.nav_overlay {
 			width: 100%;
 			position: fixed;
@@ -68,23 +72,71 @@
 	}
 
 
-	@media only screen and (min-width: 452px) {
-		.nav {
-			position: fixed;
-			width: 100%;
-			z-index: 100;
+@media only screen and (min-width: 452px) {
+	.nav {
+		position: fixed;
+		width: 100%;
+		z-index: 100;
 
-			.ham {
-				.leftham {
+		.ham {
+			.leftham {
 
-					.prof {
-						font-size: 12px;
-					}
+				.prof {
+					font-size: 12px;
+				}
 
-					.name {
-						font-size: 20px;
+				.name {
+					font-size: 20px;
+				}
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 999px) {
+	.nav {
+		position: fixed;
+		width: 380px;
+		height: 100%;
+		z-index: 100;
+		padding: 80px 50px 144px 50px;
+
+		.ham, .nav_overlay {
+			display: none;
+		}
+
+		.sidebar {
+			display: block;
+
+			.sideHead {
+
+				.prof {
+					color: rgba( 255, 255, 255, .6 );
+					font-size: 16px;
+				}
+
+				.name {
+					font-size: 18px;
+					margin-bottom: 10px;
+				}
+			} 
+
+			.sideItems {
+				margin-top: 80px;
+
+				.sideItem {
+					font-size: 18px;
+					cursor: pointer;
+					border-bottom: 1px solid #00224f;
+					width: fit-content;
+					margin-bottom: 20px;
+					transition: all .3s ease;
+
+					&:hover {
+						border-bottom: 1px solid white;
 					}
 				}
 			}
 		}
 	}
+}
