--- a/styles/about.scss
+++ b/styles/about.scss
@@ -53,6 +53,10 @@
 			.link_cons {
 				display: flex;
 
+				a {
+					-webkit-tap-highlight-color: transparent;
+				}
+
 				
 				.link_con {
 					box-shadow: 0 1px 4px RGB(26 26 67 / 10%);
