--- a/styles/about.scss
+++ b/styles/about.scss
@@ -51,7 +51,10 @@
 			}
 
 			.link_cons {
-				display: flex;
+				display: grid;
+				grid-template-columns: 44px 44px 100px;
+				grid-gap: 12px;
+				align-items: center;
 
 				a {
 					-webkit-tap-highlight-color: transparent;
@@ -70,6 +73,19 @@
 						width: 24px;
 						height: 24px;
 					}
+				}
+
+				.resume {
+					font-size: 14px;
+					height: fit-content;
+					background: #000;
+					padding: 8px 12px;
+			    border-radius: 8px;
+			    background-color: #6b21a8;
+			    color: #e9d5ff;
+			    width: fit-content;
+			    box-shadow: 0 1px 4px RGB(26 26 67 / 10%);
+			    cursor: pointer;
 				}
 			}
 		}
