--- a/styles/about.scss
+++ b/styles/about.scss
@@ -80,9 +80,9 @@
 					height: fit-content;
 					background: #000;
 					padding: 8px 12px;
-			    border-radius: 8px;
+			    border-radius: 10px;
 			    background-color: #6b21a8;
-			    color: #e9d5ff;
+			    color: #fff;
 			    width: fit-content;
 			    box-shadow: 0 1px 4px RGB(26 26 67 / 10%);
 			    cursor: pointer;
