--- a/styles/about.scss
+++ b/styles/about.scss
@@ -78,10 +78,9 @@
 				.resume {
 					font-size: 14px;
 					height: fit-content;
-					background: #000;
 					padding: 8px 12px;
 			    border-radius: 10px;
-			    background-color: #6b21a8;
+			    background-color: #00224f;
 			    color: #fff;
 			    width: fit-content;
 			    box-shadow: 0 1px 4px RGB(26 26 67 / 10%);
