--- a/styles/about.scss
+++ b/styles/about.scss
@@ -80,7 +80,7 @@
 					height: fit-content;
 					padding: 8px 12px;
 			    border-radius: 10px;
-			    background-color: #00224f;
+			    background-color: #6b21a8;
 			    color: #fff;
 			    width: fit-content;
 			    box-shadow: 0 1px 4px RGB(26 26 67 / 10%);
