--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -25,7 +25,7 @@
 
 				.name {
 					margin-bottom: 3px;
-					border-bottom: 1px solid #00224f;
+					border-bottom: 1px solid #6b21a8;
 					cursor: pointer;
 
 					&:hover {
@@ -55,7 +55,7 @@
 
 			.item {
 				padding: 3px 0;
-				border-bottom: 1px solid #00224f;
+				border-bottom: 1px solid #6b21a8;
 				width: fit-content;
 				cursor: pointer;
 				margin-bottom: 10px;
@@ -130,7 +130,7 @@
 				.sideItem {
 					font-size: 18px;
 					cursor: pointer;
-					border-bottom: 1px solid #00224f;
+					border-bottom: 1px solid #6b21a8;
 					width: fit-content;
 					margin-bottom: 20px;
 					transition: all .3s ease;
