--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,142 +1,139 @@
 .nav {
-		color: #fff;
-		background: #00224f;
-		position: fixed;
-		width: 100%;
-		z-index: 100;
+  color: #fff;
+  background: #00224f;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 
-		.ham {
-			background: #00224f;
-			padding: 10px 25px;
-			display: flex;
-			z-index: 6;
-			justify-content: space-between;
-			position: relative;
+  .ham {
+    background: #00224f;
+    padding: 10px 25px;
+    display: flex;
+    z-index: 6;
+    justify-content: space-between;
+    position: relative;
 
-			.leftham {
-				margin: auto 0;
+    .leftham {
+      margin: auto 0;
 
-				.prof {
-					color: rgba( 255, 255, 255, .6 );
-					font-size: 10px;
-				}
+      .prof {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 10px;
+      }
 
-				.name {
-					margin-bottom: 3px;
-					border-bottom: 1px solid #00224f;
-					cursor: pointer;
+      .name {
+        margin-bottom: 3px;
+        border-bottom: 1px solid #00224f;
+        cursor: pointer;
 
-					&:hover {
-						border-bottom: 1px solid white;
-					}
-				}
-			}
-		}
+        &:hover {
+          border-bottom: 1px solid white;
+        }
+      }
+    }
+  }
 
-		.sidebar {
-			display: none;
-		}
+  .sidebar {
+    display: none;
+  }
 
-		.nav_overlay {
-			width: 100%;
-			position: fixed;
-			transition: all .3s;
-			background: #00224f;
-			top: -100px; 
-			left: 0;
-			padding: 0 30px;
-			height: 0;
-		}
+  .nav_overlay {
+    width: 100%;
+    position: fixed;
+    transition: all 0.3s;
+    background: #00224f;
+    top: -100px;
+    left: 0;
+    padding: 0 30px;
+    height: 0;
+  }
 
-		.items {
+  .items {
+    .item {
+      padding: 3px 0;
+      border-bottom: 1px solid #00224f;
+      width: fit-content;
+      cursor: pointer;
+      margin-bottom: 10px;
+      transition: all 0.3s ease;
 
-			.item {
-				padding: 3px 0;
-				border-bottom: 1px solid #00224f;
-				width: fit-content;
-				cursor: pointer;
-				margin-bottom: 10px;
-				transition: all .3s ease;
+      &:hover {
+        border-bottom: 1px solid white;
+      }
+    }
+  }
 
-				&:hover {
-					border-bottom: 1px solid white;
-				}
-			}
-		}
-
-		.open_overlay {
-			padding: 100px 30px 30px;
-			height: 100vh;
-			top: 0;
-		}
-	}
-
+  .open_overlay {
+    padding: 100px 30px 30px;
+    height: 100vh;
+    top: 0;
+  }
+}
 
 @media only screen and (min-width: 452px) {
-	.nav {
-		position: fixed;
-		width: 100%;
-		z-index: 100;
+  .nav {
+    position: fixed;
+    width: 100%;
+    z-index: 100;
 
-		.ham {
-			.leftham {
+    .ham {
+      .leftham {
+        .prof {
+          font-size: 12px;
+        }
 
-				.prof {
-					font-size: 12px;
-				}
-
-				.name {
-					font-size: 20px;
-				}
-			}
-		}
-	}
+        .name {
+          font-size: 20px;
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (min-width: 999px) {
-	.nav {
-		position: fixed;
-		width: 380px;
-		height: 100%;
-		z-index: 100;
-		padding: 80px 50px 144px 50px;
+  .nav {
+    position: fixed;
+    width: 380px;
+    height: 100%;
+    z-index: 100;
+    padding: 80px 50px 144px 50px;
 
-		.ham, .nav_overlay {
-			display: none;
-		}
+    .ham,
+    .nav_overlay {
+      display: none;
+    }
 
-		.sidebar {
-			display: block;
+    .sidebar {
+      display: block;
 
-			.sideHead {
+      .sideHead {
+        .prof {
+          color: rgba(255, 255, 255, 0.6);
+          font-size: 16px;
+        }
 
-				.prof {
-					color: rgba( 255, 255, 255, .6 );
-					font-size: 16px;
-				}
+        .name {
+          font-size: 18px;
+          margin-bottom: 10px;
+        }
+      }
 
-				.name {
-					font-size: 18px;
-					margin-bottom: 10px;
-				}
-			} 
+      .sideItems {
+        margin-top: 80px;
 
-			.sideItems {
-				margin-top: 80px;
+        .sideItem {
+          font-size: 18px;
+          cursor: pointer;
+          border-bottom: 1px solid #00224f;
+          width: fit-content;
+          margin-bottom: 20px;
+          transition: all 0.3s ease;
 
-				.sideItem {
-					font-size: 18px;
-					cursor: pointer;
-					border-bottom: 1px solid #00224f;
-					width: fit-content;
-					margin-bottom: 20px;
-					transition: all .3s ease;
-
-					&:hover {
-						border-bottom: 1px solid white;
-					}
-				}
-			}
-		}
-	}
+          &:hover {
+            border-bottom: 1px solid white;
+          }
+        }
+      }
+    }
+  }
 }
