--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #091a28;
+  color: #fff;
 }
 
 a {
@@ -15,7 +15,7 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family: "Archivo", sans-serif;
+  font-family: "Fredoka One", sans-serif;
 }
 
 .footer {
@@ -57,3 +57,4 @@ a {
 @import "about";
 @import "nav";
 @import "projects";
+@import "card";
