--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -15,12 +15,15 @@
 
     .head_p {
       margin-bottom: 30px;
+      color: #afadad;
     }
 
     .diff_proj {
       margin-bottom: 35px;
 
       .head {
+        margin-bottom: 20px;
+
         img {
           width: 16px;
           height: 16px;
@@ -30,27 +33,37 @@
     }
 
     .diff_proj_content {
-      ul {
-        li {
-          line-height: 23px;
-          margin-bottom: 10px;
+      width: 100%;
 
-          a {
-            border-bottom: 1px solid black;
-            padding-bottom: 2px;
-            margin-right: 5px;
-          }
-        }
+      .noproj_p {
+        color: #afadad;
+      }
+
+      .my-masonry-grid {
+        display: -webkit-box; /* Not needed if autoprefixing */
+        display: -ms-flexbox; /* Not needed if autoprefixing */
+        display: flex;
+        width: 100%;
+      }
+      .my-masonry-grid_column {
+        background-clip: padding-box;
+      }
+
+      /* Style your items */
+      .my-masonry-grid_column > div {
+        /* change div to reference your elements you put in <Masonry> */
+        margin-bottom: 15px;
       }
     }
   }
 }
 
-@media only screen and (min-width: 452px) {
+@media only screen and (min-width: 500px) {
   .projects {
     .content {
-      width: 560px;
+      width: 800px;
       margin: 0 auto;
+      padding: 20px;
 
       .title {
         font-size: 36px;
@@ -68,17 +81,14 @@
       }
 
       .diff_proj_content {
-        ul {
-          li {
-            line-height: 23px;
-            margin-bottom: 10px;
-
-            a {
-              border-bottom: 1px solid black;
-              padding-bottom: 2px;
-              margin-right: 5px;
-            }
-          }
+        .my-masonry-grid {
+          margin-left: -15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column {
+          padding-left: 15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column > div {
+          margin-bottom: 15px; /* space between items */
         }
       }
     }
