--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -50,16 +50,23 @@
 
   .items {
     .item {
-      padding: 3px 0;
+      padding: 10px 15px 10px 0;
       border-bottom: 1px solid #6b21a8;
       width: fit-content;
       cursor: pointer;
       margin-bottom: 10px;
-      transition: all 0.3s ease;
+      transition: all 0.3s ease-in-out;
+      border-radius: 8px;
 
       &:hover {
-        border-bottom: 1px solid white;
+        background-color: #942ee7;
+        padding: 10px 15px;
       }
+    }
+
+    .activePage {
+      background-color: #942ee7;
+      padding: 10px 15px;
     }
   }
 
@@ -126,12 +133,20 @@
           cursor: pointer;
           border-bottom: 1px solid #6b21a8;
           width: fit-content;
-          margin-bottom: 20px;
-          transition: all 0.3s ease;
+          margin-bottom: 15px;
+          transition: all 0.3s ease-in-out;
+          border-radius: 8px;
+          padding: 5px 15px 5px 0;
 
           &:hover {
-            border-bottom: 1px solid white;
+            background-color: #942ee7;
+            padding: 5px 15px;
           }
+        }
+
+        .activePage {
+          background-color: #942ee7;
+            padding: 5px 15px;
         }
       }
     }
