--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -13,6 +13,12 @@
     justify-content: space-between;
     position: relative;
 
+    .ops {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
     .leftham {
       margin: auto 0;
 
@@ -38,7 +44,7 @@
     position: fixed;
     transition: all 0.3s;
     background: #6b21a8;
-    top: -100px;
+    top: -200px;
     left: 0;
     padding: 0 30px;
     height: 0;
@@ -46,7 +52,7 @@
 
   .items {
     .item {
-      padding: 10px 15px 10px 0;
+      padding: 10px 15px 10px 8px;
       border-bottom: 1px solid #6b21a8;
       width: fit-content;
       cursor: pointer;
@@ -109,6 +115,10 @@
     .sidebar {
       display: block;
 
+      .toogle {
+        margin-left: 15px;
+      }
+
       .sideHead {
         .prof {
           color: rgba(255, 255, 255, 0.6);
@@ -132,7 +142,7 @@
           margin-bottom: 15px;
           transition: all 0.3s ease-in-out;
           border-radius: 8px;
-          padding: 5px 15px 5px 0;
+          padding: 5px 15px 5px 15px;
 
           &:hover {
             background-color: #942ee7;
