--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
+// import variables
+@import "variables";
+
 html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #091a28;
-  color: #fff;
+  background-color: var(--background);
+  color:  var(--foreground);
 }
+
 
 a {
   color: inherit;
