--- a/styles/card.scss
+++ b/styles/card.scss
@@ -50,30 +50,30 @@
     overflow-x: auto;
     gap: 5px;
 
-    &::-webkit-scrollbar {
-      width: 5px;
-      height: 8px;
-      cursor: pointer;
-    }
+    // &::-webkit-scrollbar {
+    //   width: 5px;
+    //   height: 8px;
+    //   cursor: pointer;
+    // }
 
-    /* Track */
-    &::-webkit-scrollbar-track {
-      background: #1f2937;
+    // /* Track */
+    // &::-webkit-scrollbar-track {
+    //   background: #1f2937;
 
-      cursor: pointer;
-    }
+    //   cursor: pointer;
+    // }
 
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: #1f2937;
-      cursor: pointer;
-    }
+    // /* Handle */
+    // &::-webkit-scrollbar-thumb {
+    //   background: #1f2937;
+    //   cursor: pointer;
+    // }
 
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: #091a28;
-      cursor: pointer;
-    }
+    // /* Handle on hover */
+    // &::-webkit-scrollbar-thumb:hover {
+    //   background: #091a28;
+    //   cursor: pointer;
+    // }
 
     .tool {
       width: fit-content;
