--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,5 +14,5 @@
   --secondaryFg: #afadad;
   --secondaryBg: #1f2937;
   --shadow: 0 0px 0px 0 RGB(43 80 237 / 20%);
-  --borderColor: #091a28;
+  --borderColor: #1f2937;
 }
