--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -51,6 +51,25 @@
     .diff_proj_content {
       width: 100%;
 
+      .wentWrong {
+        margin-top: 100px;
+        text-align: center;
+
+        span {
+          padding: 5px 10px;
+          background: #6b21a8;
+          border-radius: 8px;
+          margin-left: 5px;
+          cursor: pointer;
+          transition: all .3s ease;
+          color: #fff;
+
+          &:hover {
+            background-color: #47166e;
+          }
+        }
+      }
+
       .noproj_p {
         color: var(--secondaryFg);
       }
