--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -107,10 +107,11 @@
 
 @media only screen and (min-width: 500px) {
   .projects {
+
     .content {
       width: 800px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 80px 20px 20px;
 
       .title {
         font-size: 36px;
