--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 // import variables
 @import "variables";
@@ -19,6 +20,8 @@ a {
 * {
   box-sizing: border-box;
   font-family: "Fredoka One", sans-serif;
+  font-family: 'Poppins', sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .themeChanger {
