style: font sizes

--- a/styles/card.scss
+++ b/styles/card.scss
@@ -50,6 +50,7 @@
     width: 100%;
     margin: 10px 0 15px;
     color: var(--secondaryFg);
+    font-size: 12px;
   }
 
   .project_tools {
@@ -93,6 +94,7 @@
       border-radius: 3px;
       white-space: nowrap;
       margin-right: 5px;
+      font-size: 12px;
     }
   }
 
