--- a/styles/card.scss
+++ b/styles/card.scss
@@ -14,7 +14,7 @@
     align-items: center;
     width: 100%;
 
-    h3 {
+    h4 {
       margin: 0;
     }
 
@@ -95,6 +95,7 @@
       white-space: nowrap;
       margin-right: 5px;
       font-size: 12px;
+      font-family: "Fredoka One", sans-serif;
     }
   }
 
