--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -19,6 +19,7 @@
       margin-right: 10px;
       color: var(--foreground);
       font-size: 14px;
+      font-family: "Fredoka One", sans-serif;
     }
   }
 
@@ -29,6 +30,7 @@
     z-index: 6;
     justify-content: space-between;
     position: relative;
+    font-family: "Fredoka One", sans-serif;
 
     .ops {
       display: flex;
@@ -54,10 +56,12 @@
 
       .prof {
         color: rgba(255, 255, 255, 0.6);
+        font-family: "Fredoka One", sans-serif;
         font-size: 10px;
       }
 
       .name {
+        font-family: "Fredoka One", sans-serif;
         margin-bottom: 3px;
         border-bottom: 1px solid #6b21a8;
         cursor: pointer;
@@ -91,6 +95,7 @@
       margin-bottom: 10px;
       transition: all 0.3s ease-in-out;
       border-radius: 8px;
+      font-family: "Fredoka One", sans-serif;
 
       &:hover {
         background-color: #942ee7;
@@ -105,6 +110,7 @@
 
       .toogle {
         display: block;
+
       }
   }
 
@@ -161,6 +167,8 @@
       position: relative;
 
       .sideHead {
+        font-family: "Fredoka One", sans-serif;
+
         .prof {
           color: rgba(255, 255, 255, 0.6);
           font-size: 15px;
@@ -184,6 +192,7 @@
           transition: all 0.3s ease-in-out;
           border-radius: 8px;
           padding: 5px 15px 5px 15px;
+          font-family: "Fredoka One", sans-serif;
 
           &:hover {
             background-color: #942ee7;
