--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -41,6 +41,7 @@
       border: 3px solid var(--borderColor);
       cursor: pointer;
       margin: 0 auto;
+      font-family: "Fredoka One", sans-serif;
 
       &:hover {
         background: var(--background);
