--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -151,7 +151,7 @@
 
     .content {
       grid-column: 2;
-      padding: 90px 0 30px;
+      padding: 90px 30px;
 
       .title {
         margin-top: 0;
