--- a/styles/snippets.scss
+++ b/styles/snippets.scss
@@ -1,11 +1,11 @@
-.snippets__container {
+.snippets {
   height: 100%;
   min-height: 92vh;
   position: relative;
   font-family: "Roboto", sans-serif;
 
 
-  .snippets {
+  .content {
     padding: 100px 20px 20px;
 
 
@@ -26,6 +26,40 @@
           font-size: 10px;
           border-radius: 8px;
         }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 500px) {
+  .snippets {
+
+    .content {
+      width: 800px;
+      margin: 0 auto;
+      padding: 80px 20px 20px;
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
+
+}
+
+@media only screen and (min-width: 999px) {
+  .snippets {
+    display: grid;
+    grid-template-columns: 380px 1fr;
+
+    .content {
+      grid-column: 2;
+      padding: 90px 30px;
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
       }
     }
   }
