--- a/styles/snippets.scss
+++ b/styles/snippets.scss
@@ -6,6 +6,7 @@
 
   .content {
     padding: 90px 20px 20px;
+    width: 100%;
 
     .title {
       font-size: 24px;
@@ -14,22 +15,45 @@
 
     .wrapper {
         font-family: "Roboto", sans-serif;
+        display: grid;
+        grid-gap: 20px;
+
 
       .gist {
+        width: 100%;
+        background: var(--secondaryBg);
+        box-shadow: var(--shadow);
+        height: fit-content;
+        padding: 0 10px;
+        border-radius: 8px;
+        border: 3px solid var(--borderColor);
+        position: relative;
 
         .header {
           font-size: 12px;
-          background: var(--secondaryBg);
-          box-shadow: var(--shadow);
-          border: 3px solid var(--borderColor);
           padding: 10px;
-          border-radius: 8px;
         }
 
         pre {
           font-size: 10px;
           border-radius: 8px;
         }
+      }
+
+      .my-masonry-grid {
+        display: -webkit-box; /* Not needed if autoprefixing */
+        display: -ms-flexbox; /* Not needed if autoprefixing */
+        display: flex;
+        width: 100%;
+      }
+      .my-masonry-grid_column {
+        background-clip: padding-box;
+      }
+
+      /* Style your items */
+      .my-masonry-grid_column > div {
+        /* change div to reference your elements you put in <Masonry> */
+        margin-bottom: 15px;
       }
     }
   }
@@ -46,6 +70,17 @@
       .wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+
+        .my-masonry-grid {
+          margin-left: -15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column {
+          padding-left: 15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column > div {
+          margin-bottom: 15px; /* space between items */
+        }
       }
     }
   }
@@ -64,6 +99,7 @@
       .wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
       }
     }
   }
