--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-color: var(--background);
   color: var(--foreground);
-  font-family: "Fredoka One", sans-serif
+  font-family: monospace;
 }
 
 a {
@@ -88,3 +88,4 @@ a {
 @import "nav";
 @import "projects";
 @import "card";
+@import "blog";
