--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-color: var(--background);
   color: var(--foreground);
-  font-family: monospace;
+  font-family: "Fredoka One", san-serif;
 }
 
 a {
