--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -45,6 +45,10 @@
       width: 800px;
       margin: 0 auto;
       padding: 80px 20px 20px;
+
+      .wrapper {
+      	grid-template-columns: 1fr 1fr;
+      }
     }
   }
 }
@@ -57,6 +61,10 @@
     .content {
       grid-column: 2;
       padding: 90px 30px;
+
+      .wrapper {
+      	grid-template-columns: 1fr 1fr;
+      }
     }
   }
 }
