style: create ui

--- a/styles/guestbook.scss
+++ b/styles/guestbook.scss
@@ -4,22 +4,17 @@
   position: relative;
 
   .content {
-    padding: 90px 30px 30px;
+    padding: 90px 20px 30px;
     height: fit-content;
     min-height: 90vh;
 
     .drop_wrapper {
 
       .create {
-        background: var(--secondaryBg);
-        padding: 15px;
-        box-shadow: var(--shadow);
-        border: 3px solid var(--borderColor);
-        border-radius: 8px;
 
         p {
           color: var(--secondaryFg);
-          font-size: 12px;
+          font-size: 10px;
           margin-top: 5px;
         }
 
@@ -32,25 +27,36 @@
             resize: vertical;
             min-height: 80px;
             border: 0;
-            background: var(--background);
             border-radius: 8px;
             padding: 10px;
+
+            background: var(--secondaryBg);
+            box-shadow: var(--shadow);
             border: 3px solid var(--borderColor);
-        border-radius: 8px;
+            border-radius: 8px;
+
+            color: var(--foreground);
+            margin-top: 5px;
           }
 
           button {
             width: 100%;
             outline: 0;
-            padding: 10px 0;
+            padding: 12px 0;
             text-align: center;
             background: #6b21a8;
             border-radius: 8px; 
             border: 0;
             color: #fff;
-            margin-top: 5px;
+            margin-top: 10px;
+
+            box-shadow: var(--shadow);
           }
         }
+      }
+
+      .drop_content_wrapper {
+        margin-top: 40px;
       }
     }
   }
