--- a/styles/guestbook.scss
+++ b/styles/guestbook.scss
@@ -15,8 +15,20 @@
 
     .drop_wrapper {
 
+      .react-loading-skeleton {
+        border-radius: 8px;
+        background: var(--secondaryBg);
+        box-shadow: var(--shadow);
+        border: 3px solid var(--borderColor);
+      }
+
+      .react-loading-skeleton:after {
+        background: var(--background);
+      }
+
       .out_ui {
-        min-height: 120px;
+        padding-top: 80px;
+        min-height: 270px;
         text-align: center; 
 
         span {
@@ -36,6 +48,7 @@
           outline: 0;
           height: fit-content;
           margin: 10px auto;
+          cursor: pointer;
 
           span {
             margin-left: 10px;
@@ -92,7 +105,7 @@
             color: #fff;
             margin-top: 10px;
             font-family: "Fredoka One", san-serif;
-
+            cursor: pointer;
             box-shadow: var(--shadow);
           }
         }
@@ -104,6 +117,34 @@
       display: grid;
       grid-gap: 10px;
 
+      .my-masonry-grid {
+        display: -webkit-box; /* Not needed if autoprefixing */
+        display: -ms-flexbox; /* Not needed if autoprefixing */
+        display: flex;
+        width: 100%;
+      }
+      .my-masonry-grid_column {
+        background-clip: padding-box;
+      }
+
+      /* Style your items */
+      .my-masonry-grid_column > div {
+        /* change div to reference your elements you put in <Masonry> */
+        margin-bottom: 15px;
+      }
+
+      .react-loading-skeleton {
+        margin-bottom: 15px;
+        border-radius: 8px;
+        background: var(--secondaryBg);
+        box-shadow: var(--shadow);
+        border: 3px solid var(--borderColor);
+      }
+
+      .react-loading-skeleton:after {
+        background: var(--background);
+      }
+
       .drop {
         background: var(--secondaryBg);
         color: var(--secondaryFg);
@@ -111,6 +152,7 @@
         border: 3px solid var(--borderColor);
         padding: 10px;
         border-radius: 8px;
+        height: fit-content;
 
         .header {
           display: flex;
@@ -137,6 +179,8 @@
 
         .drop_body {
           margin: 10px 0 0;
+          white-space: pre-wrap;
+          height: fit-content;
         }
       }
     }
@@ -151,6 +195,21 @@
       width: 800px;
       margin: 0 auto;
       padding: 80px 20px 20px;
+
+            .drop_content_wrapper {
+        width: 100%;
+
+        .my-masonry-grid {
+          margin-left: -15px; /* gutter size offset */
+          display: flex;
+        }
+        .my-masonry-grid_column {
+          padding-left: 15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column > div {
+          margin-bottom: 15px; /* space between items */
+        }
+      }
     }
   }
 }
@@ -163,6 +222,20 @@
     .content {
       grid-column: 2;
       padding: 90px 30px;
+
+      .drop_content_wrapper {
+        width: 100%;
+
+        .my-masonry-grid {
+          margin-left: -15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column {
+          padding-left: 15px; /* gutter size offset */
+        }
+        .my-masonry-grid_column > div {
+          margin-bottom: 15px; /* space between items */
+        }
+      }
     }
   }
 }
