--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 
 // import variables
 @import "variables";
@@ -10,6 +11,7 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: "Fredoka One", san-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 a {
