--- a/styles/guestbook.scss
+++ b/styles/guestbook.scss
@@ -8,9 +8,14 @@
     height: fit-content;
     min-height: 90vh;
 
-    .title {
-      font-size: 24px;
-      margin-bottom: 40px;
+    .content_header {
+      display: flex;
+      justify-content: space-between;
+
+      .title {
+        font-size: 24px;
+        margin-bottom: 40px;
+      }
     }
 
     .drop_wrapper {
@@ -59,6 +64,31 @@
 
       .create {
 
+        .pp {
+          font-size: 14px;
+          color: var(--secondaryFg);
+
+          span {
+            color: var(--foreground);
+          }
+
+          button {
+            width: fit-content;
+            outline: 0;
+            padding: 6px 10px;
+            text-align: center;
+            background: #6b21a8;
+            border-radius: 8px; 
+            border: 0;
+            color: #fff;
+            margin-top: 10px;
+            font-family: "Fredoka One", san-serif;
+            cursor: pointer;
+            box-shadow: var(--shadow);
+            margin-left: 10px;
+          }
+        }
+
         .hh {
           margin-bottom: 10px;
         }
@@ -72,10 +102,6 @@
         .con {
           width: 100%;
           margin-bottom: 20px;
-
-          .pp {
-            font-size: 8px;
-          }
 
           textarea {
             width: 100%;
