--- a/styles/guestbook.scss
+++ b/styles/guestbook.scss
@@ -144,6 +144,13 @@
       display: grid;
       grid-gap: 10px;
 
+      .empty {
+        width: 100%;
+        height: 200px;
+        display: grid;
+        place-items: center;
+      }
+
       .my-masonry-grid {
         display: -webkit-box; /* Not needed if autoprefixing */
         display: -ms-flexbox; /* Not needed if autoprefixing */
