--- a/styles/guestbook.scss
+++ b/styles/guestbook.scss
@@ -48,17 +48,73 @@
           text-align: center;
           padding: 8px 16px;
           border-radius: 8px;
-          width: fit-content;
+          width: 198px;
           border: 0;
           outline: 0;
-          height: fit-content;
+          height: 44px;
           margin: 15px auto;
           cursor: pointer;
           font-family: "Fredoka One", san-serif;
+          justify-content: center;
 
-          span {
-            margin-left: 10px;
-          }
+          .loader,
+            .loader:after {
+              border-radius: 50%;
+              width: 20px;
+              height: 20px;
+              display: none;
+            }
+
+            .loader {
+              font-size: 10px;
+              position: relative;
+              border-top: 3px solid rgba(255, 255, 255, 0.2);
+              border-right: 3px solid rgba(255, 255, 255, 0.2);
+              border-bottom: 3px solid rgba(255, 255, 255, 0.2);
+              border-left: 3px solid #ffffff;
+              -webkit-transform: translateZ(0);
+              -ms-transform: translateZ(0);
+              transform: translateZ(0);
+              -webkit-animation: load8 1.1s infinite linear;
+              animation: load8 1.1s infinite linear;
+            }
+            @-webkit-keyframes load8 {
+              0% {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+              }
+              100% {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+              }
+            }
+            @keyframes load8 {
+              0% {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+              }
+              100% {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+              }
+            }
+
+            .loginTxtnIco {
+              display: flex;
+              align-items: center;
+
+              span {
+                margin-left: 10px;
+              }
+            }
+
+            .hideLoginTxtnIco {
+              display: none;
+            }
+
+            .showLoginLoader {
+              display: block;
+            }
         }
       }
 
@@ -134,6 +190,65 @@
             font-family: "Fredoka One", san-serif;
             cursor: pointer;
             box-shadow: var(--shadow);
+            height: 44px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+
+            .loader,
+            .loader:after {
+              border-radius: 50%;
+              width: 20px;
+              height: 20px;
+              display: none;
+            }
+
+            .loader {
+              font-size: 10px;
+              position: relative;
+              border-top: 3px solid rgba(255, 255, 255, 0.2);
+              border-right: 3px solid rgba(255, 255, 255, 0.2);
+              border-bottom: 3px solid rgba(255, 255, 255, 0.2);
+              border-left: 3px solid #ffffff;
+              -webkit-transform: translateZ(0);
+              -ms-transform: translateZ(0);
+              transform: translateZ(0);
+              -webkit-animation: load8 1.1s infinite linear;
+              animation: load8 1.1s infinite linear;
+            }
+            @-webkit-keyframes load8 {
+              0% {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+              }
+              100% {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+              }
+            }
+            @keyframes load8 {
+              0% {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+              }
+              100% {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+              }
+            }
+
+            .loginTxtnIco {
+              display: block;
+            }
+
+            .hideLoginTxtnIco {
+              display: none;
+            }
+
+            .showLoginLoader {
+              display: block;
+            }
           }
         }
       }
