--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,10 +1,9 @@
-.main {
+.home {
   height: 100%;
   min-height: 92vh;
   position: relative;
 
   .content {
-    padding: 70px 30px 30px;
     height: fit-content;
     min-height: 90vh;
 
