--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,27 @@
+@font-face {
+  font-weight: 400;
+  font-family: 'GT Walsheim Pro';
+  font-style: normal;
+  src: url('/fonts/GTWalsheimPro-Regular.woff2') format('woff2');
+  font-display: optional;
+}
+
+@font-face {
+  font-weight: 500;
+  font-family: 'GT Walsheim Pro';
+  font-style: normal;
+  src: url('/fonts/GTWalsheimPro-Medium.woff2') format('woff2');
+  font-display: optional;
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: 'GT Walsheim Pro';
+  font-style: normal;
+  src: url('/fonts/GTWalsheimPro-Bold.woff2') format('woff2');
+  font-display: optional;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
 // import variables
@@ -9,7 +33,9 @@ body {
   margin: 0;
   background-color: var(--background);
   color: var(--foreground);
-  font-family: "Fredoka One", san-serif;
+  font-family: var(--fontFamily);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
