--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,6 +6,9 @@
   --secondaryBg: #fff;
   --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
+  --fontFamily: 'GT Walsheim Pro', sann-serif;
+  --headerBg: rgba(9, 26, 40, 0.6);
+  --buttonBg: rgba(9, 26, 40, 0.8);
 }
 
 [data-theme='dark'] {
@@ -13,6 +16,8 @@
   --foreground: white;
   --secondaryFg: #afadad;
   --secondaryBg: #1f2937;
-  --shadow: 0 0px 0px 0 RGB(43 80 237 / 20%);
+  --shadow: 0 4px 4px 0 RGB(31 41 55 / 20%);
+  --headerBg: rgba(9, 26, 40, 0.6);
   --borderColor: #1f2937;
+  --buttonBg: #6b21a8;
 }
