--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,8 +7,8 @@
   --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
   --fontFamily: 'GT Walsheim Pro', sann-serif;
-  --headerBg: rgba(9, 26, 40, 0.6);
-  --buttonBg: rgba(9, 26, 40, 0.8);
+  --headerBg: #6b21a8;
+  --buttonBg: #6b21a8;
 }
 
 [data-theme='dark'] {
@@ -17,7 +17,7 @@
   --secondaryFg: #afadad;
   --secondaryBg: #1f2937;
   --shadow: 0 4px 4px 0 RGB(31 41 55 / 20%);
-  --headerBg: rgba(9, 26, 40, 0.6);
+  --headerBg: #091a28;
   --borderColor: #1f2937;
   --buttonBg: #6b21a8;
 }
