--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,8 +7,8 @@
   --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
   --fontFamily: 'GT Walsheim Pro', sann-serif;
-  --headerBg: #6b21a8;
-  --buttonBg: #6b21a8;
+  --headerBg: #091a28;
+  --buttonBg: #091a28;
 }
 
 [data-theme='dark'] {
