--- a/components/page/page.module.scss
+++ b/components/page/page.module.scss
@@ -27,7 +27,7 @@
 
 .footer {
   width: 100%;
-  padding: 30px 15px;
+  padding: 30px 20px;
   display: grid;
   color: var(--secondaryFg);
 
@@ -55,7 +55,7 @@
 }
 
 .copyright {
-
+  text-align: center;
 }
 
 .links {
