--- a/components/services/services.module.scss
+++ b/components/services/services.module.scss
@@ -20,6 +20,16 @@
 			padding: 15px;
 			height: fit-content;
 
+			.img_wrapper {
+				height: 60px;
+				margin-bottom: 10px;
+
+				img {
+					width: 60px;
+					height: 60px;
+				}
+			}
+
 			h3, p {
 				margin: 0;
 			}
